# systems

./: .gitignore  Cargo.toml  README.md
src/: main.rs  state.rs  system.rs  utils.rs
src/game_of_life/: cell.rs  life.rs  mod.rs
src/n_body_sim/: body.rs  mod.rs  sim.rs
src/systems/: mod.rs  nbody_sim.rs
src/systems/langtons_ant/: mod.rs
src/systems/life/: cell.rs  game_of_life.rs  life.rs  mod.rs
src/systems/nbody_sim/: body.rs  mod.rs  sim.rs
